FIX: made the button wrap nicely.

--- a/app/views/devise/registrations/_form.html.haml
+++ b/app/views/devise/registrations/_form.html.haml
@@ -5,5 +5,5 @@
   = form.input :email
   = form.input :password
   = form.input :password_confirmation
-  = form.button :submit
+  = form.wrapped_button :submit
 
