--- a/app/views/devise/registrations/_form.html.haml
+++ b/app/views/devise/registrations/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(resource, :html => {:class => 'form-horizontal' }) do |form|
+= simple_form_for resource do |form|
   = form.input :first_name
   = form.input :last_name
   = form.input :login
