Fix: other name -> login replacements.

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,10 @@
 %h3 User
 %p
-  User: #{@user.name}
+  First name: #{@user.first_name}
+%p
+  Last name: #{@user.last_name}
+%p
+  Login: #{@user.login}
 %p
   Email: #{@user.email if @user.email}
+
