--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,5 +2,6 @@
 %ul.users
   - @users.each do |user|
     %li
-      = link_to user.name, user
+      = link_to user.login, user
       signed up #{user.created_at.to_date}
+
