Upload avatars and show them on the navbar

--- a/app/views/devise/registrations/_form.html.haml
+++ b/app/views/devise/registrations/_form.html.haml
@@ -3,6 +3,7 @@
   = form.input :last_name
   = form.input :login
   = form.input :email
+  = form.input :avatar
   - if resource.new_record?
     = form.input :password
     = form.input :password_confirmation
