--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,14 +1,19 @@
 = link_to "Reader", root_path, :class => 'brand'
-%ul.nav
-  - if user_signed_in?
+- if user_signed_in?
+  %p.navbar-text.pull-right
+    - if current_user.avatar.url
+      = image_tag current_user.avatar_url, alt: 'avatar', class: 'avatar'
+    - else
+      = current_user.login
+  %ul.nav.pull-right
     %li
       = link_to 'Logout', destroy_user_session_path, :method=>'delete'
-  - else
-    %li
-      = link_to 'Login', new_user_session_path
-  - if user_signed_in?
     %li
       = link_to 'Edit account', edit_user_registration_path
-  - else
+- else
+  %ul.nav
+    %li
+      = link_to 'Login', new_user_session_path
     %li
       = link_to 'Sign up', new_user_registration_path
+
