--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,15 +1,14 @@
 = link_to "Reader", root_path, :class => 'brand'
 - if user_signed_in?
-  %p.navbar-text.pull-right
-    - if current_user.avatar.url
-      = image_tag current_user.avatar_url, alt: 'avatar', class: 'avatar'
-    - else
-      = current_user.login
   %ul.nav.pull-right
     %li
       = link_to 'Logout', destroy_user_session_path, :method=>'delete'
     %li
       = link_to 'Edit account', edit_user_registration_path
+  %p.navbar-text.pull-right
+    = current_user.login
+    - if current_user.avatar.url
+      = image_tag current_user.avatar.small_thumb.url, size: "30x30", alt: 'avatar', class: 'avatar'
 - else
   %ul.nav
     %li
