--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
   %p.navbar-text.pull-right
     = current_user.login
     - if current_user.avatar.url
-      = image_tag current_user.avatar.small_thumb.url, size: "30x30", alt: 'avatar', class: 'avatar'
+      = image_tag current_user.avatar.navbar.url, alt: 'avatar', class: 'avatar'
 - else
   %ul.nav
     %li
