--- a/app/views/suscriptions/_form.html.haml
+++ b/app/views/suscriptions/_form.html.haml
@@ -1,9 +1,6 @@
 = semantic_form_for @suscription do |f|
   = f.inputs do
     = f.input :feed_url
-    = f.input :title
-    = f.input :description
-    = f.input :url
+    = f.input :custom_title
+    = f.action :submit
 
-  = f.actions do
-    = f.action :submit, :as => :input
