--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -16,6 +16,20 @@
   %b Published date:
   = @article.published_date
 
-= link_to 'Edit', edit_article_path(@article)
-\|
+#comments
+  - unless @comments.empty?
+    %h2 Comments
+    %ul.unstyled
+      - @comments.each do |comment|
+        %li
+          %h3=  comment.title
+          %p= comment.comment
+          %span= comment.user.first_name
+  %h3 Add a new comment
+  = semantic_form_for [@article, @comment] do |f|
+    = f.input :title
+    = f.input :comment, :input_html => { :rows => 10 }
+    = f.action :submit
+
 = link_to 'Back', articles_path
+
