--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,17 +1,18 @@
 %p#notice= notice
 
-%p
-  %b Channel:
-  = @article.channel
-%p
-  %b Title:
+
+%h1
+  %a.btn.btn-small(title="Add star"){:href => add_star_article_path(@article) }
+    %i.icon-star(alt="Star")
   = @article.title
-%p
-  %b Link:
-  = @article.link
+
+-# {:class => [@item.type, @item == @sortcol && [:sort, @sortdir]] }  ; url_for(@article, :add_star => true
+
+
 %p
   %b Description:
   = @article.description
+  %span= link_to "(see full text)", @article.link
 %p
   %b Published date:
   = @article.published_date
@@ -31,5 +32,5 @@
     = f.input :comment, :input_html => { :rows => 10 }
     = f.action :submit
 
-= link_to 'Back', articles_path
+= link_to 'Back', :back
 
