--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,18 +1,24 @@
-= link_to "Reader", root_path, :class => 'brand'
-- if user_signed_in?
-  %ul.nav.pull-right
-    %li
-      = link_to 'Logout', destroy_user_session_path, :method=>'delete'
-    %li
-      = link_to 'Edit account', edit_user_registration_path
-  %p.navbar-text.pull-right
-    = current_user.login
-    - if current_user.avatar.url
-      = image_tag current_user.avatar.navbar.url, alt: 'avatar', class: 'avatar'
-- else
-  %ul.nav
-    %li
-      = link_to 'Login', new_user_session_path
-    %li
-      = link_to 'Sign up', new_user_registration_path
+%header.navbar.navbar-fixed-top.navbar-inverse
+  %nav.navbar-inner
+    .container
+      = link_to "Reader", root_path, :class => 'brand'
+      = form_tag search_path, method: :get, class: "navbar-search pull-right" do
+        = text_field_tag :q, nil, class: 'search-query', placeholder: "search"
+      - if user_signed_in?
+        %ul.nav
+          %li
+            %p.navbar-text
+              = current_user.login
+              - if current_user.avatar.url
+                = image_tag current_user.avatar.navbar.url, alt: 'avatar', class: 'avatar'
+          %li
+            = link_to 'Logout', destroy_user_session_path, :method=>'delete'
+          %li
+            = link_to 'Edit account', edit_user_registration_path
+      - else
+        %ul.nav
+          %li
+            = link_to 'Login', new_user_session_path
+          %li
+            = link_to 'Sign up', new_user_registration_path
 
