--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,8 +2,11 @@
   %nav.navbar-inner
     .container
       = link_to "Reader", root_path, :class => 'brand'
-      = form_tag search_path, method: :get, class: "navbar-search pull-right" do
-        = text_field_tag :q, nil, class: 'search-query', placeholder: "search"
+      = form_tag search_path, method: :get, class: "form-search navbar-search pull-right" do
+        .input-append
+          = text_field_tag :q, nil, class: 'search-query', placeholder: "search"
+          %button.btn(text="submit" type="submit" value="submit")
+            %i.icon-search
       - if user_signed_in?
         %ul.nav
           %li
